force-app/bedrock/lib/rest/objects/Rest_Config__mdt/Rest_Config__mdt.object-meta.xml
<CustomObject>
    <description>Bedrock REST route configuration.</description>
    <label>Rest Config</label>
    <pluralLabel>Rest Configs</pluralLabel>
</CustomObject>