force-app/bedrock/lib/rest/objects/Rest_Config__mdt/fields/Apex__c.field-meta.xml
<CustomField>
    <fullName>Apex__c</fullName>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>