force-app/bedrock/lib/rest/objects/Rest_Config__mdt/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Version</label>
    <type>Checkbox</type>
</CustomField>