force-app/bedrock/lib/rest/objects/Rest_Config__mdt/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>